[metadata]
name = clm-multicloud
summary = CLM MultiCloud Console
description_file =
    README.rst
author = Conzex Global
author_email = hello@conzex.com
home_page = https://docs.conzex.com/clm-multicloud/
python_requires = >=3.8
classifier =
    Environment :: CLM MultiCloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls:
    Source=https://packages.conzex.com/clm/multicloud-console
    Tracker=https://bugs.defendx.io/multicloud-console

[files]
packages =
    skyline_console
